@@ -156,6 +156,13 @@ function opt = mpoption(varargin)
 %   opf.ignore_angle_lim    0           angle diff limits for branches
 %       [ 0 - include angle difference limits, if specified                 ]
 %       [ 1 - ignore angle difference limits even if specified              ]
+%   opf.init_from_mpc       -1          specify whether to use current state
+%                                       in MATPOWER case to initialize OPF
+%                                       (currently supported only for Ipopt,
+%                                        Knitro and MIPS solvers)
+%       [  -1 - MATPOWER decides, based on solver/algorithm                 ]
+%       [   0 - ignore current state when initializing OPF                  ]
+%       [   1 - use current state to initialize OPF                         ]
 %   opf.return_raw_der      0           for AC OPF, return constraint and
 %                                       derivative info in results.raw
 %                                       (in fields g, dg, df, d2f) [ 0 or 1 ]
@@ -1368,6 +1375,7 @@ opt = struct(...
         'violation',            5e-6, ...
         'flow_lim',             'S', ...
         'ignore_angle_lim',     0, ...
+        'init_from_mpc',        -1, ...
         'return_raw_der',       0   ), ...
     'verbose',              1, ...
     'out',                  struct(...
